--- a/nlp/src/BERT_NER.ipynb
+++ b/nlp/src/BERT_NER.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 1,
       "metadata": {
         "id": "7s5qlqI-etnc"
       },
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -30,6 +30,16 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "random_seed = 1\n",
+        "transformers.set_seed(seed=random_seed)\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -38,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -244,14 +254,16 @@
               "[1000 rows x 6 columns]"
             ]
           },
-          "execution_count": 38,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df_nlp = pd.read_json('data/nlp.jsonl', lines=True).iloc[:1000]\n",
         "# df_nlp = pd.read_json('data/nlp.jsonl', lines=True)\n",
+        "# df_nlp = pd.read_json('../data/nlp.jsonl', lines=True).iloc[:1000]\n",
+        "df_nlp = pd.read_json('../data/nlp.jsonl', lines=True).sample(n=1000)\n",
+        "\n",
         "df_nlp['tokens'] = df_nlp['transcript'].apply(lambda x: re.findall(r'[.?]|\\w+', x))\n",
         "df_nlp['tool'] = df_nlp['tool'].apply(lambda x: re.findall(r'[.?]|\\w+', x))\n",
         "df_nlp['heading'] = df_nlp['heading'].apply(lambda x: list(map(lambda y: num2words(int(y)), list(str(x).zfill(3)))))\n",
@@ -293,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -309,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -318,37 +330,37 @@
               "((700, 6), (100, 6), (200, 6))"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "train, test = train_test_split(df_nlp, test_size=0.2, random_state=1)\n",
-        "train, val = train_test_split(train, test_size=0.125, random_state=1) # 0.125 x 0.8 = 0.1\n",
+        "train, test = train_test_split(df_nlp, test_size=0.2, random_state=random_seed)\n",
+        "train, val = train_test_split(train, test_size=0.125, random_state=random_seed) # 0.125 x 0.8 = 0.1\n",
         "train.shape, val.shape, test.shape"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
-        "train.to_json('data/nlp_train.jsonl', orient='records', lines=True)\n",
-        "test.to_json('data/nlp_test.jsonl', orient='records', lines=True)\n",
-        "val.to_json('data/nlp_val.jsonl', orient='records', lines=True)"
+        "train.to_json('../data/nlp_train.jsonl', orient='records', lines=True)\n",
+        "test.to_json('../data/nlp_test.jsonl', orient='records', lines=True)\n",
+        "val.to_json('../data/nlp_val.jsonl', orient='records', lines=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2e450a8b24684103857934e679fb9acf",
+              "model_id": "226fed123aed4e8997ef584b11c297bc",
               "version_major": 2,
               "version_minor": 0
             },
@@ -362,7 +374,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "57e69497da824b6ea936a7114da97cb0",
+              "model_id": "8296b3a90bbd404b94e9de39191271d2",
               "version_major": 2,
               "version_minor": 0
             },
@@ -376,7 +388,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ef580b49eda043e7be314e0cdac220d8",
+              "model_id": "52e598ee090b4ba983edb27864124f4e",
               "version_major": 2,
               "version_minor": 0
             },
@@ -406,16 +418,16 @@
               "})"
             ]
           },
-          "execution_count": 42,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "_nlp_data = {\n",
-        "\t'train' : 'data/nlp_train.jsonl',\n",
-        "\t'validation' : 'data/nlp_val.jsonl',\n",
-        "\t'test' : 'data/nlp_test.jsonl'\n",
+        "\t'train' : '../data/nlp_train.jsonl',\n",
+        "\t'validation' : '../data/nlp_val.jsonl',\n",
+        "\t'test' : '../data/nlp_test.jsonl'\n",
         "}\n",
         "\n",
         "nlp_data =  load_dataset('json', data_files=_nlp_data) \n",
@@ -431,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -502,7 +514,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 9,
       "metadata": {
         "id": "4FX3JmnRfAv7"
       },
@@ -570,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -618,7 +630,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "fc7e8dd326634867b48da1ba18c8eba2",
+              "model_id": "4e69eee993e8405da52c60f237f5e99b",
               "version_major": 2,
               "version_minor": 0
             },
@@ -632,7 +644,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "d692e78925774b0cac9601f8d3605181",
+              "model_id": "00cbaaf794e24275ac765de0881d655b",
               "version_major": 2,
               "version_minor": 0
             },
@@ -646,7 +658,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2b569040dc4143afb282f3707ecd5fd3",
+              "model_id": "a3e06304e84847798ae36e89fb09ddc3",
               "version_major": 2,
               "version_minor": 0
             },
@@ -671,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 11,
       "metadata": {
         "id": "tySgh2eY_AKG"
       },
@@ -715,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 12,
       "metadata": {
         "id": "pNZJvlI3f3dr"
       },
@@ -726,6 +738,8 @@
           "text": [
             "Some weights of BertForTokenClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
             "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+            "C:\\Users\\Keck\\AppData\\Local\\Temp\\ipykernel_25612\\2808789182.py:15: FutureWarning: load_metric is deprecated and will be removed in the next major version of datasets. Use 'evaluate.load' instead, from the new library 🤗 Evaluate: https://huggingface.co/docs/evaluate\n",
+            "  metric = load_metric(\"seqeval\")\n",
             "c:\\Users\\Keck\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\datasets\\load.py:759: FutureWarning: The repository for seqeval contains custom code which must be executed to correctly load the metric. You can inspect the repository content at https://raw.githubusercontent.com/huggingface/datasets/2.19.1/metrics/seqeval/seqeval.py\n",
             "You can avoid this message in future by passing the argument `trust_remote_code=True`.\n",
             "Passing `trust_remote_code=True` will be mandatory to load this metric from the next major release of `datasets`.\n",
@@ -763,7 +777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -784,7 +798,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b7a7026a33734e7a937bef1b812789c8",
+              "model_id": "7a16c21b911541c5b44f75ba8d0b9181",
               "version_major": 2,
               "version_minor": 0
             },
@@ -805,7 +819,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "f13e7d1c8da24e6fa4c407b48e0dc430",
+              "model_id": "0471d4e425d14b3e9acbe3d29de3ec9c",
               "version_major": 2,
               "version_minor": 0
             },
@@ -820,13 +834,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'eval_loss': 0.11292388290166855, 'eval_precision': 0.98, 'eval_recall': 0.9346049046321526, 'eval_f1': 0.9567642956764296, 'eval_accuracy': 0.9775700934579439, 'eval_runtime': 0.2886, 'eval_samples_per_second': 346.475, 'eval_steps_per_second': 24.253, 'epoch': 1.0}\n"
+            "{'eval_loss': 0.09678119421005249, 'eval_precision': 0.9716713881019831, 'eval_recall': 0.9346049046321526, 'eval_f1': 0.9527777777777778, 'eval_accuracy': 0.9813084112149533, 'eval_runtime': 4.3918, 'eval_samples_per_second': 22.77, 'eval_steps_per_second': 1.594, 'epoch': 1.0}\n"
           ]
         },
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "d523201cc1b84bab8ac3d6048ccdf60f",
+              "model_id": "a1598f7f4996401893833a500484c137",
               "version_major": 2,
               "version_minor": 0
             },
@@ -841,13 +855,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'eval_loss': 0.040131229907274246, 'eval_precision': 0.9806094182825484, 'eval_recall': 0.9645776566757494, 'eval_f1': 0.9725274725274725, 'eval_accuracy': 0.9869158878504672, 'eval_runtime': 0.3071, 'eval_samples_per_second': 325.594, 'eval_steps_per_second': 22.792, 'epoch': 2.0}\n"
+            "{'eval_loss': 0.037862084805965424, 'eval_precision': 0.9806094182825484, 'eval_recall': 0.9645776566757494, 'eval_f1': 0.9725274725274725, 'eval_accuracy': 0.9878504672897196, 'eval_runtime': 4.2784, 'eval_samples_per_second': 23.373, 'eval_steps_per_second': 1.636, 'epoch': 2.0}\n"
           ]
         },
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "1bdc7bd687b0487daacf13e9c20ee046",
+              "model_id": "f510b9df487f4faab0300bdbae6edaee",
               "version_major": 2,
               "version_minor": 0
             },
@@ -862,17 +876,17 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'eval_loss': 0.02865491434931755, 'eval_precision': 0.986449864498645, 'eval_recall': 0.9918256130790191, 'eval_f1': 0.9891304347826086, 'eval_accuracy': 0.9934579439252337, 'eval_runtime': 0.223, 'eval_samples_per_second': 448.433, 'eval_steps_per_second': 31.39, 'epoch': 3.0}\n",
-            "{'train_runtime': 13.0644, 'train_samples_per_second': 160.742, 'train_steps_per_second': 10.104, 'train_loss': 0.24123506835012726, 'epoch': 3.0}\n"
+            "{'eval_loss': 0.03078080154955387, 'eval_precision': 0.9836512261580381, 'eval_recall': 0.9836512261580381, 'eval_f1': 0.9836512261580381, 'eval_accuracy': 0.9920560747663552, 'eval_runtime': 4.2046, 'eval_samples_per_second': 23.784, 'eval_steps_per_second': 1.665, 'epoch': 3.0}\n",
+            "{'train_runtime': 347.5771, 'train_samples_per_second': 6.042, 'train_steps_per_second': 0.38, 'train_loss': 0.22773476802941525, 'epoch': 3.0}\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "TrainOutput(global_step=132, training_loss=0.24123506835012726, metrics={'train_runtime': 13.0644, 'train_samples_per_second': 160.742, 'train_steps_per_second': 10.104, 'train_loss': 0.24123506835012726, 'epoch': 3.0})"
+              "TrainOutput(global_step=132, training_loss=0.22773476802941525, metrics={'train_runtime': 347.5771, 'train_samples_per_second': 6.042, 'train_steps_per_second': 0.38, 'train_loss': 0.22773476802941525, 'epoch': 3.0})"
             ]
           },
-          "execution_count": 48,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -890,7 +904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -909,7 +923,7 @@
               " 'tokenizer\\\\tokenizer.json')"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -921,7 +935,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 15,
       "metadata": {
         "id": "qWj16dJeMj10"
       },
@@ -948,7 +962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 16,
       "metadata": {
         "id": "QBagjGQfM3xo"
       },
@@ -959,7 +973,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -968,21 +982,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'entity': 'I-TAR', 'score': 0.8147378, 'index': 4, 'word': 'car', 'start': 15, 'end': 18}\n",
-            "{'entity': 'B-TAR', 'score': 0.7651532, 'index': 6, 'word': 'red', 'start': 20, 'end': 23}\n",
-            "{'entity': 'B-TAR', 'score': 0.7344842, 'index': 13, 'word': 'white', 'start': 42, 'end': 47}\n",
-            "{'entity': 'B-HDG', 'score': 0.8632876, 'index': 15, 'word': '1', 'start': 49, 'end': 50}\n",
-            "{'entity': 'I-HDG', 'score': 0.99354386, 'index': 16, 'word': 'six', 'start': 51, 'end': 54}\n",
-            "{'entity': 'I-HDG', 'score': 0.9913721, 'index': 17, 'word': 'two', 'start': 55, 'end': 58}\n",
-            "{'entity': 'B-TOL', 'score': 0.68350875, 'index': 19, 'word': 'javelin', 'start': 60, 'end': 67}\n",
-            "{'entity': 'I-TOL', 'score': 0.7650573, 'index': 20, 'word': 'missiles', 'start': 68, 'end': 76}\n"
+            "{'entity': 'I-TAR', 'score': 0.8785443, 'index': 4, 'word': 'car', 'start': 15, 'end': 18}\n",
+            "{'entity': 'B-TAR', 'score': 0.8562962, 'index': 6, 'word': 'red', 'start': 20, 'end': 23}\n",
+            "{'entity': 'B-TAR', 'score': 0.9575715, 'index': 13, 'word': 'white', 'start': 42, 'end': 47}\n",
+            "{'entity': 'B-HDG', 'score': 0.87913495, 'index': 15, 'word': '1', 'start': 49, 'end': 50}\n",
+            "{'entity': 'I-HDG', 'score': 0.9915069, 'index': 16, 'word': 'six', 'start': 51, 'end': 54}\n",
+            "{'entity': 'I-HDG', 'score': 0.9864733, 'index': 17, 'word': 'two', 'start': 55, 'end': 58}\n",
+            "{'entity': 'B-TOL', 'score': 0.7350409, 'index': 19, 'word': 'javelin', 'start': 60, 'end': 67}\n",
+            "{'entity': 'I-TOL', 'score': 0.75939256, 'index': 20, 'word': 'missiles', 'start': 68, 'end': 76}\n"
           ]
         }
       ],
