--- a/vlm/src/create_dataset.ipynb
+++ b/vlm/src/create_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "8c9c1871",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,7 @@
     "import numpy as np\n",
     "from typing import Dict\n",
     "\n",
+    "from PIL import Image\n",
     "from datasets import load_dataset, Dataset, Features, Value\n",
     "\n",
     "from sklearn.model_selection import train_test_split"
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "71a8673a",
    "metadata": {},
    "outputs": [
@@ -61,49 +62,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>image_0.jpg</td>\n",
-       "      <td>0</td>\n",
+       "      <th>5074</th>\n",
+       "      <td>image_5074.jpg</td>\n",
+       "      <td>5074</td>\n",
        "      <td>&lt;PIL.JpegImagePlugin.JpegImageFile image mode=...</td>\n",
        "      <td>1520</td>\n",
        "      <td>870</td>\n",
-       "      <td>{'id': [0, 1, 2, 3], 'area': [7296, 672, 4864,...</td>\n",
+       "      <td>{'id': [0, 1, 2, 3, 4, 5, 6, 7], 'area': [2640...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>image_1.jpg</td>\n",
-       "      <td>1</td>\n",
+       "      <th>2711</th>\n",
+       "      <td>image_2711.jpg</td>\n",
+       "      <td>2711</td>\n",
        "      <td>&lt;PIL.JpegImagePlugin.JpegImageFile image mode=...</td>\n",
        "      <td>1520</td>\n",
        "      <td>870</td>\n",
-       "      <td>{'id': [4, 5, 6, 7, 8, 9], 'area': [2304, 6912...</td>\n",
+       "      <td>{'id': [8, 9, 10, 11, 12], 'area': [2048, 2496...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>image_2.jpg</td>\n",
-       "      <td>2</td>\n",
+       "      <th>3670</th>\n",
+       "      <td>image_3670.jpg</td>\n",
+       "      <td>3670</td>\n",
        "      <td>&lt;PIL.JpegImagePlugin.JpegImageFile image mode=...</td>\n",
        "      <td>1520</td>\n",
        "      <td>870</td>\n",
-       "      <td>{'id': [10, 11, 12, 13, 14, 15], 'area': [2912...</td>\n",
+       "      <td>{'id': [13, 14, 15, 16], 'area': [960, 3072, 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>image_3.jpg</td>\n",
-       "      <td>3</td>\n",
+       "      <th>2377</th>\n",
+       "      <td>image_2377.jpg</td>\n",
+       "      <td>2377</td>\n",
        "      <td>&lt;PIL.JpegImagePlugin.JpegImageFile image mode=...</td>\n",
        "      <td>1520</td>\n",
        "      <td>870</td>\n",
-       "      <td>{'id': [16, 17, 18, 19, 20, 21, 22], 'area': [...</td>\n",
+       "      <td>{'id': [17, 18, 19, 20, 21, 22, 23], 'area': [...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>image_4.jpg</td>\n",
-       "      <td>4</td>\n",
+       "      <th>4195</th>\n",
+       "      <td>image_4195.jpg</td>\n",
+       "      <td>4195</td>\n",
        "      <td>&lt;PIL.JpegImagePlugin.JpegImageFile image mode=...</td>\n",
        "      <td>1520</td>\n",
        "      <td>870</td>\n",
-       "      <td>{'id': [23, 24, 25], 'area': [3360, 1152, 3648...</td>\n",
+       "      <td>{'id': [24, 25, 26, 27, 28, 29, 30], 'area': [...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -115,105 +116,105 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>image_195.jpg</td>\n",
-       "      <td>195</td>\n",
+       "      <th>1771</th>\n",
+       "      <td>image_1771.jpg</td>\n",
+       "      <td>1771</td>\n",
        "      <td>&lt;PIL.JpegImagePlugin.JpegImageFile image mode=...</td>\n",
        "      <td>1520</td>\n",
        "      <td>870</td>\n",
-       "      <td>{'id': [1038, 1039, 1040, 1041, 1042], 'area':...</td>\n",
+       "      <td>{'id': [521, 522, 523, 524, 525, 526], 'area':...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>image_196.jpg</td>\n",
-       "      <td>196</td>\n",
+       "      <th>1832</th>\n",
+       "      <td>image_1832.jpg</td>\n",
+       "      <td>1832</td>\n",
        "      <td>&lt;PIL.JpegImagePlugin.JpegImageFile image mode=...</td>\n",
        "      <td>1520</td>\n",
        "      <td>870</td>\n",
-       "      <td>{'id': [1043, 1044, 1045, 1046], 'area': [2048...</td>\n",
+       "      <td>{'id': [527, 528, 529, 530, 531], 'area': [249...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>image_197.jpg</td>\n",
-       "      <td>197</td>\n",
+       "      <th>2289</th>\n",
+       "      <td>image_2289.jpg</td>\n",
+       "      <td>2289</td>\n",
        "      <td>&lt;PIL.JpegImagePlugin.JpegImageFile image mode=...</td>\n",
        "      <td>1520</td>\n",
        "      <td>870</td>\n",
-       "      <td>{'id': [1047, 1048, 1049, 1050, 1051], 'area':...</td>\n",
+       "      <td>{'id': [532, 533, 534, 535, 536], 'area': [249...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>image_198.jpg</td>\n",
-       "      <td>198</td>\n",
+       "      <th>2586</th>\n",
+       "      <td>image_2586.jpg</td>\n",
+       "      <td>2586</td>\n",
        "      <td>&lt;PIL.JpegImagePlugin.JpegImageFile image mode=...</td>\n",
        "      <td>1520</td>\n",
        "      <td>870</td>\n",
-       "      <td>{'id': [1052, 1053, 1054, 1055, 1056, 1057, 10...</td>\n",
+       "      <td>{'id': [537, 538, 539, 540, 541, 542, 543, 544...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>image_199.jpg</td>\n",
-       "      <td>199</td>\n",
+       "      <th>4221</th>\n",
+       "      <td>image_4221.jpg</td>\n",
+       "      <td>4221</td>\n",
        "      <td>&lt;PIL.JpegImagePlugin.JpegImageFile image mode=...</td>\n",
        "      <td>1520</td>\n",
        "      <td>870</td>\n",
-       "      <td>{'id': [1060, 1061, 1062, 1063, 1064, 1065], '...</td>\n",
+       "      <td>{'id': [545, 546, 547, 548, 549, 550, 551], 'a...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>200 rows × 6 columns</p>\n",
+       "<p>100 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         file_name  image_id  \\\n",
-       "0      image_0.jpg         0   \n",
-       "1      image_1.jpg         1   \n",
-       "2      image_2.jpg         2   \n",
-       "3      image_3.jpg         3   \n",
-       "4      image_4.jpg         4   \n",
-       "..             ...       ...   \n",
-       "195  image_195.jpg       195   \n",
-       "196  image_196.jpg       196   \n",
-       "197  image_197.jpg       197   \n",
-       "198  image_198.jpg       198   \n",
-       "199  image_199.jpg       199   \n",
+       "           file_name  image_id  \\\n",
+       "5074  image_5074.jpg      5074   \n",
+       "2711  image_2711.jpg      2711   \n",
+       "3670  image_3670.jpg      3670   \n",
+       "2377  image_2377.jpg      2377   \n",
+       "4195  image_4195.jpg      4195   \n",
+       "...              ...       ...   \n",
+       "1771  image_1771.jpg      1771   \n",
+       "1832  image_1832.jpg      1832   \n",
+       "2289  image_2289.jpg      2289   \n",
+       "2586  image_2586.jpg      2586   \n",
+       "4221  image_4221.jpg      4221   \n",
        "\n",
-       "                                                 image  width  height  \\\n",
-       "0    <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
-       "1    <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
-       "2    <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
-       "3    <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
-       "4    <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
-       "..                                                 ...    ...     ...   \n",
-       "195  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
-       "196  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
-       "197  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
-       "198  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
-       "199  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
+       "                                                  image  width  height  \\\n",
+       "5074  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
+       "2711  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
+       "3670  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
+       "2377  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
+       "4195  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
+       "...                                                 ...    ...     ...   \n",
+       "1771  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
+       "1832  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
+       "2289  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
+       "2586  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
+       "4221  <PIL.JpegImagePlugin.JpegImageFile image mode=...   1520     870   \n",
        "\n",
-       "                                               objects  \n",
-       "0    {'id': [0, 1, 2, 3], 'area': [7296, 672, 4864,...  \n",
-       "1    {'id': [4, 5, 6, 7, 8, 9], 'area': [2304, 6912...  \n",
-       "2    {'id': [10, 11, 12, 13, 14, 15], 'area': [2912...  \n",
-       "3    {'id': [16, 17, 18, 19, 20, 21, 22], 'area': [...  \n",
-       "4    {'id': [23, 24, 25], 'area': [3360, 1152, 3648...  \n",
-       "..                                                 ...  \n",
-       "195  {'id': [1038, 1039, 1040, 1041, 1042], 'area':...  \n",
-       "196  {'id': [1043, 1044, 1045, 1046], 'area': [2048...  \n",
-       "197  {'id': [1047, 1048, 1049, 1050, 1051], 'area':...  \n",
-       "198  {'id': [1052, 1053, 1054, 1055, 1056, 1057, 10...  \n",
-       "199  {'id': [1060, 1061, 1062, 1063, 1064, 1065], '...  \n",
+       "                                                objects  \n",
+       "5074  {'id': [0, 1, 2, 3, 4, 5, 6, 7], 'area': [2640...  \n",
+       "2711  {'id': [8, 9, 10, 11, 12], 'area': [2048, 2496...  \n",
+       "3670  {'id': [13, 14, 15, 16], 'area': [960, 3072, 1...  \n",
+       "2377  {'id': [17, 18, 19, 20, 21, 22, 23], 'area': [...  \n",
+       "4195  {'id': [24, 25, 26, 27, 28, 29, 30], 'area': [...  \n",
+       "...                                                 ...  \n",
+       "1771  {'id': [521, 522, 523, 524, 525, 526], 'area':...  \n",
+       "1832  {'id': [527, 528, 529, 530, 531], 'area': [249...  \n",
+       "2289  {'id': [532, 533, 534, 535, 536], 'area': [249...  \n",
+       "2586  {'id': [537, 538, 539, 540, 541, 542, 543, 544...  \n",
+       "4221  {'id': [545, 546, 547, 548, 549, 550, 551], 'a...  \n",
        "\n",
-       "[200 rows x 6 columns]"
+       "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2 = pd.read_json('../data/vlm.jsonl', lines=True).sample(n=100)\n",
+    "df2 = pd.read_json('../data/vlm.jsonl', lines=True).sample(n=100, random_state=1)\n",
     "\n",
     "categories = list(filter(lambda x: x != None, pd.DataFrame([i for i in list(df2['annotations'].apply(lambda x: [i['caption'] for i in x]))]).to_numpy().flatten()))\n",
     "num_cat = len(categories)\n",
@@ -257,6 +258,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5523d221",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "123"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(categories)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d1a100a1",
    "metadata": {},
@@ -266,125 +288,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "6882e8bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((140, 6), (20, 6), (40, 6))"
+       "5074    None\n",
+       "2711    None\n",
+       "3670    None\n",
+       "2377    None\n",
+       "4195    None\n",
+       "        ... \n",
+       "1771    None\n",
+       "1832    None\n",
+       "2289    None\n",
+       "2586    None\n",
+       "4221    None\n",
+       "Length: 100, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train, test = train_test_split(df_vlm, test_size=0.2, random_state=1)\n",
+    "# train, test = train_test_split(df_vlm, test_size=0.2, random_state=1)\n",
     "\n",
-    "train, val = train_test_split(train, test_size=0.125, random_state=1) # 0.125 x 0.8 = 0.1\n",
+    "# train, val = train_test_split(train, test_size=0.125, random_state=1) # 0.125 x 0.8 = 0.1\n",
     "\n",
-    "train_csv = train.drop(columns=['image'])\n",
-    "train_csv.to_csv('../data/train/metadata.csv', index=False)\n",
+    "df_vlm_csv = df_vlm.drop(columns=['image'])\n",
+    "df_vlm_csv.to_csv('../data/img/metadata.csv', index=False)\n",
     "pd.DataFrame({\n",
-    "\t'name':train['file_name'],\n",
-    "\t'img':train['image']\n",
-    "}).apply(lambda x: x[1].save('../data/train/' + x[0]), axis=1)\n",
+    "\t'name':df_vlm['file_name'],\n",
+    "\t'img':df_vlm['image']\n",
+    "}).apply(lambda x: x[1].save('../data/img/' + x[0]), axis=1)\n",
     "\n",
-    "val_csv = val.drop(columns=['image'])\n",
-    "val_csv.to_csv('../data/val/metadata.csv', index=False)\n",
-    "pd.DataFrame({\n",
-    "\t'name':val['file_name'],\n",
-    "\t'img':val['image']\n",
-    "}).apply(lambda x: x[1].save('../data/val/' + x[0]), axis=1)\n",
+    "# val_csv = val.drop(columns=['image'])\n",
+    "# val_csv.to_csv('../data/val/metadata.csv', index=False)\n",
+    "# pd.DataFrame({\n",
+    "# \t'name':val['file_name'],\n",
+    "# \t'img':val['image']\n",
+    "# }).apply(lambda x: x[1].save('../data/val/' + x[0]), axis=1)\n",
     "\n",
-    "test_csv = test.drop(columns=['image'])\n",
-    "test_csv.to_csv('../data/test/metadata.csv', index=False)\n",
-    "pd.DataFrame({\n",
-    "\t'name':test['file_name'],\n",
-    "\t'img':test['image']\n",
-    "}).apply(lambda x: x[1].save('../data/test/' + x[0]), axis=1)\n",
+    "# test_csv = test.drop(columns=['image'])\n",
+    "# test_csv.to_csv('../data/test/metadata.csv', index=False)\n",
+    "# pd.DataFrame({\n",
+    "# \t'name':test['file_name'],\n",
+    "# \t'img':test['image']\n",
+    "# }).apply(lambda x: x[1].save('../data/test/' + x[0]), axis=1)\n",
     "\n",
-    "train.shape, val.shape, test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e91a5bd0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed12ba4c87e74ede92e34377c1b65d75",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Resolving data files:   0%|          | 0/141 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "daaa81fd91f34ea7a308bbe63c0f711a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Resolving data files:   0%|          | 0/21 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "817269499f514f6d9b091cf24f0488b4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Resolving data files:   0%|          | 0/41 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['image', 'image_id', 'width', 'height', 'objects'],\n",
-       "        num_rows: 140\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['image', 'image_id', 'width', 'height', 'objects'],\n",
-       "        num_rows: 20\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['image', 'image_id', 'width', 'height', 'objects'],\n",
-       "        num_rows: 40\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vlm_data = load_dataset('ekmi00/vlm-images')\n",
-    "vlm_data"
+    "# train.shape, val.shape, test.shape"
    ]
   }
  ],
