Updated owl-vit branch

--- a/vlm/src/create_dataset.ipynb
+++ b/vlm/src/create_dataset.ipynb
@@ -224,16 +224,18 @@
     "id2label = {index: x for index, x in enumerate(categories, start=0)}\n",
     "label2id = {v: k for k, v in id2label.items()}\n",
     "\n",
-    "# df2['id'] = list(map(lambda x: {'id':x}, df2.index)) #not correct\n",
     "df2[\"image_id\"] = df2.index\n",
+    "\n",
     "df2['width'] = df2['image'].apply(lambda x: Image.open('../data/images/' + x).size)\n",
     "df2['height'] = df2['width'].apply(lambda x: x[1])\n",
     "df2['width'] = df2['width'].apply(lambda x: x[0])\n",
+    "\n",
     "df2['img'] = df2['image'].apply(lambda x: Image.open('../data/images/' +x))\n",
-    "# df2['height'] = df2['annotations'].apply(lambda x: [i['bbox'][3] for i in x])\n",
+    "\n",
     "df2['area'] = df2['annotations'].apply(lambda x: {\"area\":[i['bbox'][2] * i['bbox'][3] for i in x]})\n",
     "df2['bbox'] = df2['annotations'].apply(lambda x: {\"bbox\":[i['bbox'] for i in x]})\n",
     "df2['category'] = df2['annotations'].apply(lambda x: {'category':[label2id[i['caption']] for i in x]})\n",
+    "\n",
     "df2 = df2.drop(columns=['annotations'])\n",
     "\n",
     "counter = 0\n",
@@ -255,27 +257,6 @@
     "})\n",
     "# df_vlm.to_csv('meta_data.csv', index=False)\n",
     "df_vlm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "5523d221",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "123"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(categories)"
    ]
   },
   {
@@ -315,32 +296,12 @@
     }
    ],
    "source": [
-    "# train, test = train_test_split(df_vlm, test_size=0.2, random_state=1)\n",
-    "\n",
-    "# train, val = train_test_split(train, test_size=0.125, random_state=1) # 0.125 x 0.8 = 0.1\n",
-    "\n",
     "df_vlm_csv = df_vlm.drop(columns=['image'])\n",
-    "df_vlm_csv.to_csv('../data/img/metadata.csv', index=False)\n",
+    "df_vlm_csv.to_csv('../../vlm-images/img/metadata.csv', index=False)\n",
     "pd.DataFrame({\n",
     "\t'name':df_vlm['file_name'],\n",
     "\t'img':df_vlm['image']\n",
-    "}).apply(lambda x: x[1].save('../data/img/' + x[0]), axis=1)\n",
-    "\n",
-    "# val_csv = val.drop(columns=['image'])\n",
-    "# val_csv.to_csv('../data/val/metadata.csv', index=False)\n",
-    "# pd.DataFrame({\n",
-    "# \t'name':val['file_name'],\n",
-    "# \t'img':val['image']\n",
-    "# }).apply(lambda x: x[1].save('../data/val/' + x[0]), axis=1)\n",
-    "\n",
-    "# test_csv = test.drop(columns=['image'])\n",
-    "# test_csv.to_csv('../data/test/metadata.csv', index=False)\n",
-    "# pd.DataFrame({\n",
-    "# \t'name':test['file_name'],\n",
-    "# \t'img':test['image']\n",
-    "# }).apply(lambda x: x[1].save('../data/test/' + x[0]), axis=1)\n",
-    "\n",
-    "# train.shape, val.shape, test.shape"
+    "}).apply(lambda x: x[1].save('../../vlm-images/img/' + x[0]), axis=1)"
    ]
   }
  ],
